--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,10 @@
 body {
     overflow-x: hidden;
 } */
+
+@layer base {
+    body {
+        overflow-x: hidden;
+        font-family: "Montserrat", system-ui;
+    }
+}
